--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -461,6 +461,7 @@ tr.bp-search-parent-field label {
 .bp-admin-card.section-bbp_settings_per_rss_page h2:before,
 .bp-admin-card.section-bbp_settings_root_slugs h2:before,
 .bp-admin-card.section-bbp_settings_single_slugs h2:before,
+.bp-admin-card.section-bbp_settings_user_slugs h2:before,
 .bp-admin-card.section-bbp_settings_buddypress h2:before {
 	background-image: url(../../images/admin/icons/buddyboss/forums.svg);
 	background-size: 21px 21px;
