Fixed info model button issue.

--- a/src/bp-core/admin/css/hello-rtl.css
+++ b/src/bp-core/admin/css/hello-rtl.css
@@ -86,6 +86,8 @@ TABLE OF CONTENTS:
  * 2.1 - Dashicons
  */
 .bp-hello-close .button {
+  line-height: 24px;
+  height: 28px;
   padding: 5px !important;
 }
 
