--- a/src/bp-core/admin/css/hello-rtl.css
+++ b/src/bp-core/admin/css/hello-rtl.css
@@ -8,8 +8,7 @@ TABLE OF CONTENTS:
 --------------------------------------------------------------------------------
 1.0 - Typography and colour
 2.0 - Icons
-	2.1 - Dashicons
-	2.2 - Social Icons
+	2.1 - Social Icons
 3.0 - Elements
 	3.1 - Backdrop and container
 	3.2 - Modal footer
@@ -30,7 +29,7 @@ TABLE OF CONTENTS:
  * 1.0 - Typography and colour
  *----------------------------------------------------------------------------*/
 :root {
-  --bp-hello-color-primary: #d34600;
+  --bp-hello-color-primary: #0073aa;
   --bp-hello-color-secondary: #e5e5e5;
   --bp-hello-container-size: 15%;
 }
@@ -83,32 +82,7 @@ TABLE OF CONTENTS:
  * 2.0 - Icons
  *----------------------------------------------------------------------------*/
 /*
- * 2.1 - Dashicons
- */
-.bp-hello-close .button {
-  padding: 5px !important;
-}
-
-.bp-hello-close .close-modal:before {
-  content: "\f158";
-  color: #23282d;
-  /* wp toolbar */
-  font: 400 1.5em/1 dashicons;
-  speak: none;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-image: none !important;
-}
-
-.bp-hello-close .close-modal:focus:before, .bp-hello-close .close-modal:hover:before {
-  -webkit-transition: all 0.1s ease-in-out;
-  -o-transition: all 0.1s ease-in-out;
-  transition: all 0.1s ease-in-out;
-  color: var(--bp-hello-color-primary);
-}
-
-/*
- * 2.2 - Social Icons
+ * 2.1 - Social Icons
  */
 .bp-hello-social li a:before {
   color: #23282d;
@@ -341,7 +315,7 @@ TABLE OF CONTENTS:
     top: 60px;
     right: var(--bp-hello-container-size);
     left: var(--bp-hello-container-size);
-    bottom: 30px;
+    bottom: 23px;
     z-index: 9999;
     border-radius: 3px;
   }
@@ -366,10 +340,10 @@ TABLE OF CONTENTS:
   .bp-hello-header {
     height: auto;
     max-height: inherit;
-    padding: 6px 30px;
+    padding: 6px 23px;
   }
   .bp-hello-close {
-    left: 30px;
+    left: 23px;
   }
   .bp-hello-close .close-modal:before {
     line-height: 0.7;
@@ -378,15 +352,15 @@ TABLE OF CONTENTS:
     position: fixed;
     right: var(--bp-hello-container-size);
     left: var(--bp-hello-container-size);
-    bottom: 30px;
+    bottom: 23px;
     z-index: 10000;
     height: auto;
     max-height: inherit;
-    padding: 6px 30px;
+    padding: 6px 23px;
   }
   .bp-hello-content {
     height: calc(100% - 90px);
-    padding: 0 30px;
+    padding: 0 23px;
   }
   .bp-hello-appboss .bp-hello-content {
     height: calc(100% - 120px);
