--- a/src/bp-core/admin/sass/hello.scss
+++ b/src/bp-core/admin/sass/hello.scss
@@ -8,8 +8,7 @@ TABLE OF CONTENTS:
 --------------------------------------------------------------------------------
 1.0 - Typography and colour
 2.0 - Icons
-	2.1 - Dashicons
-	2.2 - Social Icons
+	2.1 - Social Icons
 3.0 - Elements
 	3.1 - Backdrop and container
 	3.2 - Modal footer
@@ -31,7 +30,7 @@ TABLE OF CONTENTS:
  * 1.0 - Typography and colour
  *----------------------------------------------------------------------------*/
 :root {
-	--bp-hello-color-primary: #d34600;
+	--bp-hello-color-primary: #0073aa;
 	--bp-hello-color-secondary: #e5e5e5;
 	--bp-hello-container-size: 15%;
 }
@@ -94,38 +93,7 @@ TABLE OF CONTENTS:
  *----------------------------------------------------------------------------*/
 
 /*
- * 2.1 - Dashicons
- */
-.bp-hello-close {
-
-	.button {
-		padding: 5px !important;
-	}
-
-	.close-modal {
-
-		&:before {
-			content: "\f158";
-			color: #23282d; /* wp toolbar */
-			font: 400 1.5em/1 dashicons;
-			speak: none;
-			-webkit-font-smoothing: antialiased;
-			-moz-osx-font-smoothing: grayscale;
-			background-image: none !important;
-		}
-
-		&:focus:before,
-		&:hover:before {
-			-webkit-transition: all 0.1s ease-in-out;
-			-o-transition: all 0.1s ease-in-out;
-			transition: all 0.1s ease-in-out;
-			color: var(--bp-hello-color-primary);
-		}
-	}
-}
-
-/*
- * 2.2 - Social Icons
+ * 2.1 - Social Icons
  */
 .bp-hello-social {
 
@@ -392,7 +360,7 @@ TABLE OF CONTENTS:
 		top: 60px;
 		left: var(--bp-hello-container-size);
 		right: var(--bp-hello-container-size);
-		bottom: 30px;
+		bottom: 23px;
 		z-index: 9999;
 
 		border-radius: 3px;
@@ -425,11 +393,11 @@ TABLE OF CONTENTS:
 	.bp-hello-header {
 		height: auto;
 		max-height: inherit;
-		padding: 6px 30px;
+		padding: 6px 23px;
 	}
 
 	.bp-hello-close {
-		right: 30px;
+		right: 23px;
 
 		.close-modal:before {
 			line-height: 0.7;
@@ -440,19 +408,19 @@ TABLE OF CONTENTS:
 		position: fixed; // Fixed position above "content" div.
 		left: var(--bp-hello-container-size);
 		right: var(--bp-hello-container-size);
-		bottom: 30px;
+		bottom: 23px;
 		z-index: 10000; // See #bp-hello-backdrop
 
 		height: auto;
 		max-height: inherit;
 
-		padding: 6px 30px;
+		padding: 6px 23px;
 	}
 
 	.bp-hello-content {
 		// Very very approx. height of header and footer.
 		height: calc(100% - 90px);
-		padding: 0 30px;
+		padding: 0 23px;
 	}
 
 	.bp-hello-appboss .bp-hello-content {
