--- a/src/bp-core/admin/css/common.css
+++ b/src/bp-core/admin/css/common.css
@@ -443,7 +443,8 @@ tr.bp-search-parent-field label {
 .bp-admin-card.section-bbp_settings_root_slugs h2:before,
 .bp-admin-card.section-bbp_settings_single_slugs h2:before,
 .bp-admin-card.section-bbp_settings_user_slugs h2:before,
-.bp-admin-card.section-bbp_settings_buddypress h2:before {
+.bp-admin-card.section-bbp_settings_buddypress h2:before,
+.bp-admin-card.section-bbp_settings_akismet h2:before {
   background-image: url(../../images/admin/icons/buddyboss/forums.svg);
   background-size: 21px 21px;
 }
