--- a/src/bp-core/admin/css/common.css
+++ b/src/bp-core/admin/css/common.css
@@ -319,7 +319,7 @@ tr.bp-search-parent-field label {
   min-width: 255px;
   max-width: 1050px;
   border-radius: 6px;
-  border: 1px solid #e5e5e5;
+  border: 1px solid #ccd0d4;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
   background: #fff;
 }
@@ -982,7 +982,7 @@ body.post-type-bp-email .categorydiv label {
 .bp-help-card-grid .bp-help-card {
   margin: 0 10px 2%;
   background-color: #fff;
-  border: 1px solid #e5e5e5;
+  border: 1px solid #ccd0d4;
   border-radius: 5px;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
   box-sizing: border-box;
@@ -1016,7 +1016,7 @@ body.post-type-bp-email .categorydiv label {
   max-width: 1050px;
   background-color: #fff;
   border-radius: 6px;
-  border: 1px solid #e5e5e5;
+  border: 1px solid #ccd0d4;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
   box-sizing: border-box;
 }
@@ -1178,7 +1178,7 @@ body.post-type-bp-email .categorydiv label {
   .bp-help-sidebar {
     background: #f9f9f9;
     padding: 2.5em;
-    border-right: 1px solid #eaeaea;
+    border-right: 1px solid #ccd0d4;
     border-radius: 6px 0 0 6px;
     -webkit-box-flex: 0;
     -ms-flex: 0 0 200px;
@@ -1207,7 +1207,7 @@ body.post-type-bp-email .categorydiv label {
     padding: 2.5em;
     width: 100%;
     min-height: auto;
-    border-bottom: 1px solid #eaeaea;
+    border-bottom: 1px solid #ccd0d4;
     border-radius: 6px 6px 0 0;
   }
   .bp-help-content {
