--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -1116,20 +1116,20 @@ a.layout-grid-view {
   margin: 10px 0;
 }
 
-#whats-new-post-in-box #whats-new-post-in-box-items {
+#whats-new-post-in-box-items {
   list-style: none;
   margin: 10px 0;
 }
 
-#whats-new-post-in-box #whats-new-post-in-box-items li {
+#whats-new-post-in-box-items li {
   margin-bottom: 10px;
 }
 
-#whats-new-post-in-box #whats-new-post-in-box-items #activity-autocomplete {
+#whats-new-post-in-box-items #activity-autocomplete {
   padding: 0.3em;
 }
 
-#whats-new-post-in-box #whats-new-post-in-box-items .bp-activity-object {
+#whats-new-post-in-box-items .bp-activity-object {
   display: -webkit-box;
   display: -ms-flexbox;
   display: -webkit-flex;
@@ -1141,21 +1141,21 @@ a.layout-grid-view {
   padding: 0.2em;
 }
 
-#whats-new-post-in-box #whats-new-post-in-box-items .bp-activity-object .avatar {
+#whats-new-post-in-box-items .bp-activity-object .avatar {
   width: 30px;
 }
 
-#whats-new-post-in-box #whats-new-post-in-box-items .bp-activity-object span {
+#whats-new-post-in-box-items .bp-activity-object span {
   padding-right: 10px;
   vertical-align: middle;
 }
 
-#whats-new-post-in-box #whats-new-post-in-box-items .bp-activity-object:focus, #whats-new-post-in-box #whats-new-post-in-box-items .bp-activity-object:hover {
+#whats-new-post-in-box-items .bp-activity-object:focus, #whats-new-post-in-box-items .bp-activity-object:hover {
   background: #eaeaea;
   cursor: pointer;
 }
 
-#whats-new-post-in-box #whats-new-post-in-box-items .bp-activity-object.selected {
+#whats-new-post-in-box-items .bp-activity-object.selected {
   border: 1px solid #d6d6d6;
 }
 
