--- a/src/bp-templates/bp-nouveau/common-styles/_bp_groups_messages.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_groups_messages.scss
@@ -36,7 +36,7 @@
 
 .bb-panel-head {
     border-bottom: 1px solid #E7E9EC;
-    padding: 14px 20px;
+    padding: 15px 20px;
     position: relative;
 }
 
@@ -50,6 +50,15 @@
 #item-body .total-members-text {
     line-height: 1;
     margin: 0;
+}
+
+.bp-group-message-switch-label {
+    margin: 0 0 0 auto;
+    line-height: 1;
+}
+
+.select-members-text {
+    font-size: 13px;
 }
 
 .add-more-members {
