--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -11286,3 +11286,13 @@ img.emojioneemoji {
   width: 30px;
   margin: 0 auto 10px;
 }
+
+.buddypress-wrap form.bp-messages-search-form button[type="submit"]{
+  padding: 2px 10px!important;
+  color: #939597;
+  opacity: unset!important;
+  visibility: visible!important;
+}
+body .buddypress-wrap form.bp-messages-search-form input[type=search] {
+  background-image: none;;
+}
