#247 - embed iframe size fix

--- a/src/bp-core/admin/css/common.css
+++ b/src/bp-core/admin/css/common.css
@@ -1703,3 +1703,11 @@ body .section-repair_community .settings fieldset .checkbox label code {
     transform: rotate(359deg);
   }
 }
+
+.wp-block-embed {
+  margin: 0;
+}
+
+.wp-block-embed iframe {
+  max-width: 100%;
+}
