#266 - admin card icon for Documents metabox

--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -477,6 +477,10 @@ tr.bp-search-parent-field label {
 	background-image: url(../../images/admin/icons/fontawesome/solid/camera-retro.svg);
 }
 
+.bp-admin-card.section-bp_media_settings_documents h2:before {
+	background-image: url(../../images/admin/icons/fontawesome/solid/folder.svg);
+}
+
 .bp-admin-card.section-bp_media_settings_emoji h2:before {
 	background-image: url(../../images/admin/icons/fontawesome/solid/smile.svg);
 }
