--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -1785,7 +1785,7 @@ body .section-repair_community .settings fieldset .checkbox label code {
     justify-content: center;
     align-items: center;
 }
-.content-loader  {
+.content-loader {
   display: inline-block;
   position: relative;
   width: 80px;
@@ -1795,7 +1795,7 @@ body .section-repair_community .settings fieldset .checkbox label code {
 	position: absolute;
 	left: 5px;
 	width: 9px;
-	background: #444;
+	background: #dadada;
 	animation: contentLoader 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
 	&:nth-child(1) {
 		left: 8px;
