--- a/src/bp-core/admin/css/common-rtl.css
+++ b/src/bp-core/admin/css/common-rtl.css
@@ -1711,3 +1711,53 @@ body .section-repair_community .settings fieldset .checkbox label code {
 .wp-block-embed iframe {
   max-width: 100%;
 }
+
+#bp-help-content-area.loading,
+#bp-help-main-menu-wrap.loading,
+.bp-help-sidebar.loading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.content-loader {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+
+.content-loader div {
+  display: inline-block;
+  position: absolute;
+  right: 5px;
+  width: 9px;
+  background: #dadada;
+  animation: contentLoader 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
+}
+
+.content-loader div:nth-child(1) {
+  right: 8px;
+  animation-delay: -.24s;
+}
+
+.content-loader div:nth-child(2) {
+  right: 28px;
+  animation-delay: -0.12s;
+}
+
+.content-loader div:nth-child(3) {
+  right: 48px;
+  animation-delay: 0;
+}
+
+@keyframes contentLoader {
+  0% {
+    top: 8px;
+    height: 50px;
+  }
+  50%, 100% {
+    top: 24px;
+    height: 28px;
+  }
+}
