--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -1233,6 +1233,11 @@ body.post-type-bp-email .categorydiv label {
 	}
 }
 
+.bp-help-main-menu-wrap div.notice {
+	margin: 0 10px !important;
+	width: 100%;
+}
+
 @media screen and (min-width: 782px) {
 
 	.bp-help-sidebar {
