--- a/src/bp-core/admin/css/common.css
+++ b/src/bp-core/admin/css/common.css
@@ -1182,6 +1182,11 @@ body.post-type-bp-email .categorydiv label {
   display: none;
 }
 
+.bp-help-main-menu-wrap div.notice {
+  margin: 0 10px !important;
+  width: 100%;
+}
+
 @media screen and (min-width: 782px) {
   .bp-help-sidebar {
     background: #f9f9f9;
