--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -188,6 +188,7 @@
 			.activity-inner,
 			blockquote {
 				background: $off-white;
+                                clear: both;
 				margin: $marg-med 0 $marg-sml;
 				overflow: hidden;
 				padding: $pad-med;
