--- a/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
@@ -110,7 +110,6 @@
 #activity-form-submit-wrapper {
 	border-top: 1px solid #ddd;
 	display: flex;
-	justify-content: space-between;
 	flex-flow: row wrap;
 	align-items: center;
 	padding: 0 10px;
@@ -118,29 +117,36 @@
 
 #whats-new-post-in-box {
 	margin: $marg-sml 0;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -ms-flex-flow: row wrap;
+        flex-flow: row wrap;
 
 	#whats-new-post-in-box-items {
 		list-style: none;
-		margin: $marg-sml 0;
+                position: relative;
 
 		li {
 			margin-bottom: $marg-sml;
 		}
 
-		#activity-autocomplete {
-			padding: 0.3em;
-		}
-
 		.bp-activity-object {
 
 			@include center-vert();
-			padding: 0.2em;
+			padding: 5px 10px;
 
 			.avatar {
 				width: 30px;
 			}
 
-			span {
+			.bp-item-name {
+                                font-size: 16px;
 				padding-left: $marg-sml;
 				vertical-align: middle;
 			}
@@ -157,10 +163,38 @@
 		}
 	}
 
+        #activity-autocomplete {
+                font-size: 15px;
+                padding: 2px 10px;
+                text-overflow: ellipsis;
+                white-space: nowrap;
+                overflow: hidden;
+        }
+}
+
+#whats-new-post-in {
+    margin-right: $marg-sml;
+}
+
+#bp-activity-group-ac-items {
+    background: #fff;
+    box-shadow: 0 2px 7px 1px rgba(0, 0, 0, 0.05), 0 6px 32px 0 rgba(18, 43, 70, 0.1);
+    border-radius: 4px;
+    min-width: 200px;
+    max-height: 290px;
+    overflow: auto;
+    padding: 5px 0;
+    position: absolute;
+    width: 100%;
+    z-index: 11;
+
+    &:empty {
+        display: none;
+    }
 }
 
 #whats-new-submit {
-	margin: $marg-sml 0;
+	margin: $marg-sml 0 $marg-sml auto;
 	display: flex;
 	flex-flow: row-reverse;
 
@@ -169,6 +203,102 @@
 		@include font-size(14);
 		line-height: 1;
 	}
+}
+
+#activity-post-form-privacy {
+    line-height: 1;
+}
+
+.bp-activity-privacy {
+    font-size: 16px;
+}
+
+.bb-media-privacy-wrap {
+    display: inline-block;
+    position: relative;
+
+    .privacy-wrap {
+        display: block;
+        height: 20px;
+        width: 20px;
+        cursor: pointer;
+    }
+
+    .privacy {
+        &:before {
+            content: "\f11f";
+            font-family: dashicons;
+            font-size: 18px;
+            vertical-align: middle;
+            display: inline-block;
+        }
+
+        &.onlyme:before {
+            content: "\f160";
+        }
+
+        &.loggedin:before {
+            content: "\f307";
+        }
+
+        &.friends:before {
+            content: "\f110";
+        }
+
+        &.loading:before {
+            content: "\f113";
+            animation: spin 2s infinite linear;
+        }
+    }
+
+    .activity-privacy {
+        display: none;
+        margin: 0;
+        position: absolute;
+        background: #fff;
+        box-shadow: 0 2px 7px 1px rgba(0, 0, 0, 0.05), 0 6px 32px 0 rgba(18, 43, 70, 0.1);
+        border-radius: 4px;
+        padding: 5px 0;
+        min-width: 200px;
+        left: -20px;
+        top: 35px;
+        z-index: 11;
+
+        &:before {
+            content: ' ';
+            position: absolute;
+            width: 0;
+            height: 0;
+            top: 0;
+            left: 20px;
+            border: 6px solid black;
+            border-color: #fff #fff transparent transparent;
+            -webkit-transform-origin: 0 0;
+            -ms-transform-origin: 0 0;
+            transform-origin: 0 0;
+            -webkit-transform: rotate(-45deg);
+            -ms-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+            box-shadow: 2px -3px 3px 0 rgba(0, 0, 0, 0.02);
+            z-index: 1002;
+        }
+
+        li {
+            cursor: pointer;
+            line-height: 1;
+            margin: 0;
+            padding: 10px 15px;
+            position: relative;
+        }
+
+        .selected {
+            background: $off-white;
+        }
+    }
+
+    .activity-privacy.bb-open {
+        display: block;
+    }
 }
 
 // GIF styles
