--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -1125,16 +1125,24 @@ a.layout-grid-view {
   flex-flow: row wrap;
 }
 
-#whats-new-post-in-box #whats-new-post-in-box-items {
+#whats-new-post-in-box #activity-autocomplete {
+  font-size: 15px;
+  padding: 2px 10px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+#whats-new-post-in-box-items {
   list-style: none;
   position: relative;
 }
 
-#whats-new-post-in-box #whats-new-post-in-box-items li {
+#whats-new-post-in-box-items li {
   margin-bottom: 10px;
 }
 
-#whats-new-post-in-box #whats-new-post-in-box-items .bp-activity-object {
+#whats-new-post-in-box-items .bp-activity-object {
   display: -webkit-box;
   display: -ms-flexbox;
   display: -webkit-flex;
@@ -1146,31 +1154,32 @@ a.layout-grid-view {
   padding: 5px 10px;
 }
 
-#whats-new-post-in-box #whats-new-post-in-box-items .bp-activity-object .avatar {
-  width: 30px;
+#whats-new-post-in-box-items .bp-activity-object .avatar {
+  width: 24px;
 }
 
-#whats-new-post-in-box #whats-new-post-in-box-items .bp-activity-object .bp-item-name {
+#whats-new-post-in-box-items .bp-activity-object .bp-item-name {
   font-size: 16px;
   padding-right: 10px;
   vertical-align: middle;
 }
 
-#whats-new-post-in-box #whats-new-post-in-box-items .bp-activity-object:focus, #whats-new-post-in-box #whats-new-post-in-box-items .bp-activity-object:hover {
+#whats-new-post-in-box-items .bp-activity-object:focus, #whats-new-post-in-box-items .bp-activity-object:hover {
   background: #eaeaea;
   cursor: pointer;
 }
 
-#whats-new-post-in-box #whats-new-post-in-box-items .bp-activity-object.selected {
+#whats-new-post-in-box-items .bp-activity-object.selected {
   border: 1px solid #d6d6d6;
+  padding: 0;
 }
 
-#whats-new-post-in-box #activity-autocomplete {
-  font-size: 15px;
-  padding: 2px 10px;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
+#whats-new-post-in-box-items .bp-activity-object button.bp-remove-item {
+  padding: 0;
+  border: 0;
+  background: transparent;
+  font-size: 17px;
+  margin: 0 6px;
 }
 
 #whats-new-post-in {
