TR-1511 - Activity privacy styles and group members dropdown styles

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
@@ -200,6 +200,11 @@
     &:empty {
         display: none;
     }
+
+    > .dashicons {
+        display: block;
+        margin: 5px auto;
+    }
 }
 
 #whats-new-submit {
