--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -1203,6 +1203,11 @@ a.layout-grid-view {
   display: none;
 }
 
+#bp-activity-group-ac-items > .dashicons {
+  display: block;
+  margin: 5px auto;
+}
+
 #whats-new-submit {
   margin: 10px 0 10px auto;
   display: flex;
